added YourCartSection component

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
 @theme {
     --color-custom-red: #C73B0F;
     --color-custom-white: #FCF8F6;
+    --color-custom-brown: #87635A;
 }
 
 .font-red-hat-bold {
