setting redux up

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
     --color-custom-red: #C73B0F;
     --color-custom-white: #FCF8F6;
     --color-custom-brown: #87635A;
+    --color-custom-black: ##260F08;
 }
 
 .font-red-hat-bold {
