added add to cart products on Your Cart Section

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,8 @@
     --color-custom-red: #C73B0F;
     --color-custom-white: #FCF8F6;
     --color-custom-brown: #87635A;
-    --color-custom-black: ##260F08;
+    --color-custom-black: #260F08;
+    --color-custom-gray: #AD8A85;
 }
 
 .font-red-hat-bold {
