--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,11 @@
 @theme {
     --color-custom-red: #C73B0F;
     --color-custom-white: #FCF8F6;
+    --color-custom-white2: #F5EEEC;
     --color-custom-brown: #87635A;
     --color-custom-black: #260F08;
     --color-custom-gray: #AD8A85;
+    --color-custom-gray2: #FCF8F6;
 }
 
 .font-red-hat-bold {
