in progress modal content

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
     --color-custom-black: #260F08;
     --color-custom-gray: #AD8A85;
     --color-custom-gray2: #FCF8F6;
+    --color-custom-white: #F5EEEC;
 }
 
 .font-red-hat-bold {
