--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,9 @@
     --color-custom-gray: #AD8A85;
     --color-custom-gray2: #FCF8F6;
     --color-custom-white: #F5EEEC;
+
+    --breakpoint-1216: 1216px;
+    --breakpoint-1191: 1191px
 }
 
 .font-red-hat-bold {
