added 649 and 465 breakpoint

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,8 @@
     --breakpoint-1216: 1216px;
     --breakpoint-1191: 1191px;
     --breakpoint-1001: 1001px;
+    --breakpoint-649: 649px;
+    --breakpoint-465: 465px;
 }
 
 .font-red-hat-bold {
